# FII-BDA

./: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ScriptsReadMe.md  als_recommender.ipynb  analyze_food_statistics.ipynb  convert_csvs_to_parquet.py  generate_meal_plan.ipynb  generate_nutritional_values.ipynb  generate_recommendations.ipynb  generate_top10_prot_per_kcal.ipynb  main.py  pyproject.toml  requirements.txt  sample_datasets.py
config/: stage1_local.json
